--- a/templates/main.html
+++ b/templates/main.html
@@ -9,8 +9,9 @@
 
   <center><div id="todo-table">
     <form id="address_form" method="post" action="/result" >
-    	Find the ideal meeting spot for your party.
-    	<br/>
+    	Find the ideal meeting spot for your party!
+    	<br>
+    	<br>
     	<div id="types">
 	  		<select class="form-control" name="type_0" id="type_0" >
               	<option disabled selected value="">Find...</option>
@@ -20,8 +21,8 @@
           	</select>
           	<button type="button" id="add_type">Add type</button>
 	  	</div>
+	  	<br>
 	  	Closest to...
-	  	<br/>
 	  	<br/>
         <br/>
     	<div id = "addresses">
