--- a/templates/result.html
+++ b/templates/result.html
@@ -83,6 +83,7 @@
 
           var calls_remaining = total;
           var points = [];
+          var valid_searches = total_types;
 
           for (var i = 0; i < total; i++) {
             console.log(items[i]);
@@ -151,12 +152,15 @@
                   function callback(results, status) {
                     console.log(status);
                     if (status !== google.maps.places.PlacesServiceStatus.OK) {
-                      $("#map").remove();
-                      var content = "";
-                      content += "<h1 style=\"text-align:center\">No results found :( </h1>";
-                      content += "<img class=\"center\" src =\"http://www.reactiongifs.us/wp-content/uploads/2013/06/raining_david_tennant.gif\" />";
-                      content += "<br>"
-                      $(document.body).append(content);
+                      valid_searches--;
+                      if (valid_searches <= 0) {
+                        $("#map").remove();
+                        var content = "";
+                        content += "<h1 style=\"text-align:center\">No results found :( </h1>";
+                        content += "<img class=\"center\" src =\"http://www.reactiongifs.us/wp-content/uploads/2013/06/raining_david_tennant.gif\" />";
+                        content += "<br>"
+                        $(document.body).append(content);
+                      }
                     }
                     if (status === google.maps.places.PlacesServiceStatus.OK) {
                       for (var i = 0; i < results.length; i++) {
